--- a/index.html
+++ b/index.html
@@ -16,29 +16,9 @@
 
 <body>
   <div id="app">
-    <header>
-      <img src="./assets/img/logo.svg" alt="Logo da Copa NLW">
-    </header>
-
-    <main id="cards">
-      <div class="card">
-        <h2>24/11 <span>quinta</span></h2>
-        <ul>
-          <li>
-            <img src="./assets/img/bd-brasil.svg" alt="Bandeira do Brasil" width="40px">
-            <strong>16:00</strong>
-            <img src="./assets/img/bd-servia.svg" alt="Bandeira da Sérvia" width="40px">
-          </li>
-
-          <li>
-            <img src="./assets/img/bd-brasil.svg" alt="Bandeira do Brasil" width="40px">
-            <strong>16:00</strong>
-            <img src="./assets/img/bd-servia.svg" alt="Bandeira da Sérvia" width="40px">
-          </li>
-        </ul>
-      </div>
-    </main>
+   
   </div>
+  <script src="./main.js"></script>
 </body>
 
 </html>
