--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
     rel="stylesheet">
 </head>
 
-<body>
+<body class="blue">
+
+
   <div id="app">
-   
+
+    <header>
+      <img src="./assets/img/logo.svg" alt="Logo da Copa NLW">
+    </header>
+
+    <main id="cards">
+
+    </main>
+
   </div>
   <script src="./main.js"></script>
 </body>
